<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/totalAmtLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalAmtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount_equals"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalAmtValText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/_1250"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/paymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payments"
            app:layout_constraintTop_toBottomOf="@+id/totalAmtLL"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPaymentText"
            android:text="@string/add_payment"
            app:layout_constraintTop_toBottomOf="@+id/paymentTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="180dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPaymentText" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>